--- a/E9-Optimizing-Our-App/src/assets/styles/Header.css
+++ b/E9-Optimizing-Our-App/src/assets/styles/Header.css
@@ -66,3 +66,14 @@ li {
 .login-btn:hover {
     background-color: #A0522D;
 }
+
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.online-offline {
+    font-size: 1.5rem;
+    margin-left: 2rem;
+}
